Fix z-order problem with refine my results on mobile view

--- a/primo-explore/custom/DEV-JS-BOTTOM/css/custom1.css
+++ b/primo-explore/custom/DEV-JS-BOTTOM/css/custom1.css
@@ -406,7 +406,7 @@ prm-explore-footer-after .library-address {
   right: 0%;
   transition: all 0.5s ease 0s;
   width: 100%;
-  z-index: 10;
+  z-index: 15;
   }
 
   .chat-widget {
@@ -432,7 +432,7 @@ prm-explore-footer-after .library-address {
     padding: 0 1em;
     text-align: right;
     float: right;
-    width: 37%;
+    width: 25%;
     border-top-left-radius: 90%;
     border-top-right-radius: 0%;
     box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
